--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.5",
     "@next-auth/dgraph-adapter": "^1.0.2",
     "@tailwindcss/forms": "^0.4.0",
+    "firebase": "^9.22.2",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
